2001-02-05  Bruno Haible  <haible@clisp.cons.org>

	* libgnuintl.h (LC_MESSAGES): Provide a default value.

2001-01-30  Bruno Haible  <haible@clisp.cons.org>

	* config.charset: Update for FreeBSD 4.2.

2001-01-21  Bruno Haible  <haible@clisp.cons.org>

	Use libtool.
	* Makefile.in (l): Use INTL_LIBTOOL_SUFFIX_PREFIX instead of l.
	(all-no): When USE_INCLUDED_LIBINTL is 'no' but BUILD_INCLUDED_LIBINTL
	is 'yes', still build libintl.$la because the testsuite needs it.
	(libintl.la): Add $(CPPFLAGS) $(CFLAGS) $(XCFLAGS). Linking via $(CC)
	must use all $(CFLAGS).
	(install-exec): Use libtool to install libintl.$la.
	(uninstall): Use libtool to uninstall libintl.$la.
	(mostlyclean): Remove *.la and the .libs subdir.
	* intl-compat.c: Reorder. Add comment.

2001-01-20  Bruno Haible  <haible@clisp.cons.org>

	* loadmsgcat.c (O_BINARY): Define on platforms that don't have it.
	(_nl_load_domain): Open the catalog file in binary mode.

2001-01-24  Bruno Haible  <haible@clisp.cons.org>

	* gettextP.h (SWAP): Remove declaration, to work around a compilation
	failure on alphaev5-cray-unicosmk2.0.5.X.

2001-01-15  Bruno Haible  <haible@clisp.cons.org>

	* dcigettext.c (_nl_find_msg): Cast the second iconv() arg, to avoid
	a warning.

2001-01-07  Bruno Haible  <haible@clisp.cons.org>

	* gettextP.h (__gettextdebug): Remove declaration.
	(gettext_free_exp__, gettextparse__): New non-libc declarations.
	* plural.y [!_LIBC]: Define gettextparse__, gettext_free_exp__, not
	__gettextparse, __gettext_free_exp.
	* loadmsgcat.c [!_LIBC]: Use gettextparse__, not __gettextparse.

2001-01-07  Bruno Haible  <haible@clisp.cons.org>

	* libgnuintl.h: Renamed from intlh.inst.in.
	Remove comment about __builtin_constant_p.
	(gettext): Use NULL.
	* libgettext.h: Completely rewritten. Now a conditional wrapper around
	<libintl.h>. Keep the handling of ENABLE_NLS and gettext_noop, remove
	everything else.
	* gettextP.h: Include gettext.h, for nls_uint32.