@@ -1,3 +1,7 @@
+2001-02-24  Bruno Haible  <haible@clisp.cons.org>
+
+	* dcigettext.c: Update comment about HAVE_LOCALE_NULL.
+
 2001-02-05  Bruno Haible  <haible@clisp.cons.org>
 
 	* libgnuintl.h (LC_MESSAGES): Provide a default value.
